# rust-axum-practice

./: .gitignore  Cargo.toml  README.md  index.html
src/: error.rs  main.rs  model.rs
src/web/: mod.rs  routes_login.rs  routes_tickets.rs  wm_auth.rs
tests/: quick_dev.rs
