[package]
name = "rust-axum-practice"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["macros"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.6.2", features = ["fs"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1.0.93"
httpc-test = "0.1.10"
