[package]
name = "rust-axum-practice"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["macros"] }
lazy-regex = "3.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
strum_macros = "0.26.4"
tokio = { version = "1.41.1", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.6.2", features = ["fs"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
serde_with = "3.11.0"

[dev-dependencies]
anyhow = "1.0.93"
httpc-test = "0.1.10"
